--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
+    "moment": "^2.27.0",
+    "moment-timezone": "^0.5.31",
+    "proxy": "^1.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-ionicons": "^3.1.4",
     "react-scripts": "3.4.1",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "styled-normalize": "^8.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +40,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:3000/"
 }
