--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,12 @@
 /.pnp
 .pnp.js
 
-/.vscode
-
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
 # testing
 /coverage
 
